Updated Model Results

--- a/lead_scoring.ipynb
+++ b/lead_scoring.ipynb
@@ -3676,6 +3676,135 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_proba = clf.predict_proba(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ground Truth</th>\n",
+       "      <th>Predicted</th>\n",
+       "      <th>Probability Estimate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7002</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.244298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4379</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.942053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2270</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.244298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6197</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.733886</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5311</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.118125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1227</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.007969</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1564</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.930359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2914</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.994987</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2892</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.214730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1741</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.001952</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Ground Truth  Predicted  Probability Estimate\n",
+       "7002             0          0              0.244298\n",
+       "4379             1          1              0.942053\n",
+       "2270             1          0              0.244298\n",
+       "6197             1          1              0.733886\n",
+       "5311             0          0              0.118125\n",
+       "1227             0          0              0.007969\n",
+       "1564             1          1              0.930359\n",
+       "2914             1          1              0.994987\n",
+       "2892             0          0              0.214730\n",
+       "1741             0          0              0.001952"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_lead_scoring = pd.DataFrame({\"Ground Truth\": y_test, \"Predicted\": y_pred, \"Probability Estimate\": y_proba[:, 1]})\n",
+    "df_lead_scoring.head(10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3829,6 +3958,135 @@
     "\n",
     "print(f'Accuracy: {accuracy}')\n",
     "print(f'Classification Report:\\n{report}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_proba = model.predict_proba(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ground Truth</th>\n",
+       "      <th>Predicted</th>\n",
+       "      <th>Probability Estimate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7002</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.230608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4379</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.977940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2270</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.230608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6197</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.842824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5311</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.122917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1227</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.016074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1564</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.950333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2914</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.996314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2892</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.125181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1741</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.045631</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Ground Truth  Predicted  Probability Estimate\n",
+       "7002             0          0              0.230608\n",
+       "4379             1          1              0.977940\n",
+       "2270             1          0              0.230608\n",
+       "6197             1          1              0.842824\n",
+       "5311             0          0              0.122917\n",
+       "1227             0          0              0.016074\n",
+       "1564             1          1              0.950333\n",
+       "2914             1          1              0.996314\n",
+       "2892             0          0              0.125181\n",
+       "1741             0          0              0.045631"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_lead_scoring = pd.DataFrame({\"Ground Truth\": y_test, \"Predicted\": y_pred, \"Probability Estimate\": y_proba[:, 1]})\n",
+    "df_lead_scoring.head(10)"
    ]
   },
   {
